# colext

./: .dockerignore  .gitignore  CHANGELOG  LICENSE  MANIFEST.in  README.md  build_push_app_conda.sh  build_push_pip_images.sh  conda-lock.yml  environment.yaml  exit  fltb_config.yaml  pyproject.toml  requirements.txt  restart_jtop.sh  run_experiment.py  test-deployment-jetson.yaml  test-deployment-server.yaml  test-deployment.yaml
Dockerfiles/pip/: fltb_client  fltb_server
Dockerfiles/pip_old/: flwr_client  flwr_client_jetson  flwr_server
Dockerfiles/pip_w_base_WIP/: fltb_base  fltb_client_jetson  fltb_jetson_base  fltb_server
ansible/: ansible.cfg
ansible/inventory/: devices.ini
ansible/plays/: base_sbc.yaml
base_docker_imgs/: build_images.sh  build_torchvision_torchaudio.txt  python310_nano.Dockerfile  python310_orin_xavier.Dockerfile
code/: .gitignore  README.md  requirements.txt
code/cifar10_example/: config.json
code/client/app/: build.gradle
code/client/flower_tflite/: build.gradle
code/examples/cifar10_example/: config.json
code/helpers/femnist/: model_creation.ipynb  (+1 more)
code/server/: monsoon_measurements.py  server.py  start_job.py
colext_setup/ansible/: README.md  ansible.cfg
colext_setup/base_docker_imgs/: build_images.sh  build_torchvision_torchaudio.txt  python310_nano.Dockerfile  python310_orin_xavier.Dockerfile
colext_setup/db_setup/: generate_db.sql  populate_entries.sql
colext_setup/grafana/: CoLExT_dashboard.json  config.txt
dev-config/populate_db/: generate_db.sql  populate_entries.sql
examples/benchmarking/: .gitignore  README.md  plot_result.py  run_benchmark.sh
examples/flwr_tutorial/: client.py  colext_config.yaml  requirements.txt  server.py
examples/flwr_tutorial_1_6/: client.py  colext_config.yaml  requirements.txt  run.sh  server.py
examples/flwr_tutorial_1_8/: README.md  client.py  colext_config.yaml  requirements.txt  server.py
examples/flwr_tutorial_1_8_network/: client.py  colext_config.yaml  requirements.txt
examples/measure_scrap_overhead/: client.py  colext_config.yaml  requirements.txt  run.sh  server.py
plotting/: plot_function.py  produce_plots.ipynb
populate_db/: generate_db.sql  populate_entries.sql
src/colext/: __init__.py
user_code_example/: .dockerignore  .env  buildkitd.toml  client.py  colext_config.yaml  envs.sh  fltb_config.yaml  requirements.txt  run.sh  server.py
(+177 files in other folders)
