[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fltb"
version = "0.1.0"
requires-python = ">= 3.8"
description = "FL testbed decorators and launch scripts."
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload"
]

dependencies = [
    "psutil>=5.9.8",
    "psycopg[binary]>=3.1.17",
    "kubernetes>=29.0.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "python-on-whales>=0.68.0",
    "flwr>=1.6.0"
]

[project.optional-dependencies]
jetson = ["jetson-stats"]

[project.scripts]
fltb_launch_job = "fltb.experiment_controller:launch_experiment"


[tool.setuptools_scm]