[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "colext"
version = "0.3.0"
requires-python = ">= 3.8"
description = "FL testbed decorators and launch scripts."
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload"
]

dependencies = [
    "psycopg[binary,pool]~=3.1.17",
    "kubernetes~=29.0.0",
    "pyyaml~=6.0.1",
    "jinja2~=3.1.3",
    "python-on-whales~=0.68.0",
    "flwr>=1.5.0,<1.9",
    "psutil~=5.9.8",
    "pyRAPL~=0.2.3.1",
]

[project.optional-dependencies]
jetson = ["jetson-stats==4.2.7"]
# lp = ["pyRAPL~=0.2.3.1"]
plotting = ["pandas>=2.0.3", "seaborn>=0.13.2", "matplotlib>=3.7.5"]


[project.scripts]
colext_launch_job = "colext.scripts:launch_experiment"
colext_get_metrics = "colext.scripts:retrieve_metrics"

[tool.setuptools_scm]
